<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BINhungrig</string>

    <!-- ActionBar Items -->
    <string name="action_bar_change_building">Gebäude wechseln</string>

    <!-- DishOld -->
    <!-- Days of the week - static variable -->
    <string-array name="dayName_array">
        <item>Sonntag</item>
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
        <item>Samstag</item>
    </string-array>

    <!-- Settings -->
    <string-array name="users_array">
        <item>Studenten</item>
        <item>Alle</item>
    </string-array>

    <string name="title_activity_dish_detail">Detailansicht</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="show_price">Preis anzeigen für</string>
    <string name="avg_dummy_rating">5,5</string>
    <string name="avg_title">&#248; Bewertung</string>
    <string name="label_1_start">&#9733; 1</string>
    <string name="label_2_start">&#9733; 2</string>
    <string name="label_3_start">&#9733; 3</string>
    <string name="label_4_start">&#9733; 4</string>
    <string name="label_5_start">&#9733; 5</string>
    <string name="label_price">Preis:</string>
    <string name="heading_rating">Eine Bewertung abgeben</string>
    <string name="button_rate">Bewertung speichern</string>
    <string name="dummy_numberRatings">n Bewertungen</string>
    <string name="title_activity_gallery">Bildergalerie</string>
    <string name="btn_label_complain">Bild als unangemessen melden</string>
    <string name="NoDishes">Kein Speiseplan verfügbar.</string>
    <string name="auto_download_large_pictures_description_toast">Um die volle Auflösung zu laden, klicken Sie auf das Vorschaubild.</string>

    <!-- DishDetailActivityOld -->
    <string name="no_rating_possible">Keine Bewertung möglich</string>
    <string name="own_rating">Eigene Bewertung</string>
    <string name="toast_upload_successful">Upload erfolgreich</string>
    <string name="toast_upload_failed">Fehler beim Hochladen des Photos</string>
    <string name="toast_takephoto_failed">Fehler beim Aufnehmen des Photos</string>
    <string name="current_shown_rating">Gezeigte Bewertungen: %s</string>
    <string name="all">Alle</string>
    <string name="only_today">Nur heutige</string>

    <!-- MainActivity -->
    <string name="settings_ingredients">Inhaltsstoffe</string>

    <string name="mensa_already_closed">Heute bereits geschlossen</string>
    <string name="loading_dishes">Lade Speiseplan ...</string>
    <string name="today">Heute</string>
    <string name="tomorrow">Morgen</string>

    <!-- OfflineDialog -->
    <string name="offline_title">Keine Verbindung</string>
    <string name="you_are_offline">Es besteht keine Verbindung zum Internet. Stellen Sie die Verbindung her und drücken Sie auf \"Nochmal versuchen\".</string>
    <string name="reload">Nochmal versuchen</string>
    <string name="quit">App schließen</string>

    <!-- Action Names -->
    <string name="action_settings">Einstellungen</string>
    <string name="action_take_photo">Bild aufnehmen</string>
    <string name="action_show_gallery">Bildergalerie</string>
    <string name="auto_download_large_pictures">Bilder in voller Auflösung automatisch laden</string>
    <string name="action_disclaimer">Haftungsausschluss</string>
    <string name="action_about">Über diese App</string>

    <!--About and disclaimer -->
    <string name="aboutText">
        Die BINhungrig App und die benötigte Infrasturktur wird in liebevoller Handarbeit entwickelt von:\n\n
        <b>Android</b>\n
        Anna-Katharina Wickert\n
        Tobias Knapp\n
        Maximilian Berger\n
        \n<b>iOS</b>\n
        Yannic Remmet\n
        Sven Helli\n\n
        Außerdem wird diese App auf <a href="https://github.com/t-knapp/BINhungrig-fh-bingen-mensa-android">GitHub</a> als Open Source Projekt entwickelt.
    </string>

    <!-- [Content|UploadBinary]Task -->
    <string name="user_agent_prefix">BINhungrig/android/</string>

    <!-- Ingredients Activity -->
    <string name="ingredients_info">Das Studierendenwerk muss nach geltendem Lebensmittelrecht zugelassene Zusatzstoffe kennzeichnen. Diese Kennzeichnungen werden in der Detailansicht angezeigt.</string>
    <string name="ingredients">
        1 mit Farbstoff\n
        2 mit Konservierungsstoff\n
        3 mit Antioxidationsmittel\n
        4 mit Geschmacksverstärker (ohne Glutamat)\n
        5 geschwefelt\n
        6 geschwärzt\n
        7 Zitrusfrüchte gewachst\n
        8 mit Phosphat\n
        9 mit Süßungsmittel\n
        10 enthält eine Phentanylalaninquelle\n
        11 glutenhaltiges Getreide (Weizen, Gerste, Roggen, Hafer, Dinkel, Kamut oder Hybridstämme davon)\n
        G Geflügelfleisch\n
        K Kalbfleisch\n
        M Milch\n
        R Rindschleisch\n
        S Schweinefleisch
    </string>
    <string name="ingredient_1">mit Farbstoff</string>
    <string name="ingredient_2">mit Konservierungsstoff</string>
    <string name="ingredient_3">mit Antioxidationsmittel</string>
    <string name="ingredient_4">mit Geschmacksverstärker (ohne Glutamat)</string>
    <string name="ingredient_5">geschwefelt</string>
    <string name="ingredient_6">geschwärzt</string>
    <string name="ingredient_7">Zitrusfrüchte gewachst</string>
    <string name="ingredient_8">mit Phosphat</string>
    <string name="ingredient_9">mit Süßungsmittel</string>
    <string name="ingredient_10">enthält eine Phentanylalaninquelle</string>
    <string name="ingredient_11">glutenhaltiges Getreide (Weizen, Gerste, Roggen, Hafer, Dinkel, Kamut oder Hybridstämme davon)</string>
    <string name="ingredient_G">Geflügelfleisch</string>
    <string name="ingredient_K">Kalbfleisch</string>
    <string name="ingredient_M">Milch</string>
    <string name="ingredient_R">Rindfleisch</string>
    <string name="ingredient_S">Schweinefleisch</string>


    <string name="disclaimerText">Eltern haften für ihre Kinder!</string>
    <string name="app_desctiption">Speiseplan App für die Mensa der FH-Bingen</string>
    <string name="title_activity_day_overview">DayOverviewActivity</string>
    <string name="section_format">Date: %s</string>
    <string name="title_activity_main_activity_slide">MainActivitySlide</string>

    <!-- Strings related to Settings -->
    <string name="settings_title_main">Einstellungen</string>

    <!-- Setting: HiRes Photos -->
    <string name="settings_title_photos">Bilder in voller Auflösung laden</string>
    <string name="settings_desc_photos">Automatischer Download verbraucht mehr Datenvolumen</string>

    <!-- Setting: User role -->
    <string name="settings_title_user_role">Preise zeigen für</string>
    <string-array name="settings_items_user_role">
        <item>Studierende</item>
        <item>Nicht Studierende</item>
    </string-array>
    <string-array name="settings_values_user_role">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Setting: Subscribed Buildings -->
    <string name="settings_title_subscribed_buildings">Abonierte Mensen</string>
    <string-array name="settings_items_subscribed_buildings">
    </string-array>
    <string-array name="settings_values_subscribed_buildings">
    </string-array>
    <string-array name="settings_values_default_subscribed_buildings">
    </string-array>

    <!-- MainActivitySlide -->
    <string name="toast_no_building_subscribed">Bitte zuerst eine Mensa in den Einstellungen abonnieren</string>
    <string name="dialog_title_select_building">Mensa auswählen</string>
    <string name="menu_ingredients">Inhaltsstoffe</string>

    <!-- GalleryOverview -->
    <string name="title_gallery">Galerie</string>

    <!-- PhotoDetail -->
    <string name="complain_saved">Beschwerde gespeichert.</string>
    <string name="title_photo_detail">Photo Detailansicht</string>
    <string name="already_complained">Du hast dieses Bild bereits gemeldet.</string>
    <string name="complain_photo">Bild als unangemessen melden.</string>

</resources>
