<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.fhbingen.mensa.MainActivitySlide">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_change_building"
        android:title="@string/action_bar_change_building"
        android:orderInCategory="50"
        android:showAsAction="ifRoom"
        android:icon="@mipmap/ic_store_mall_directory_white" />

    <item android:id="@+id/action_ingredients"
        android:showAsAction="never"
        android:orderInCategory="60"
        android:title="@string/settings_ingredients" />

    <item android:id="@+id/action_about"
        android:showAsAction="never"
        android:orderInCategory="120"
        android:title="@string/action_about" />

</menu>
