<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:baselineAligned="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false">
            <ImageView
                android:layout_width="@dimen/about_picture_size"
                android:layout_height="@dimen/about_picture_size"
                android:id="@+id/imageView_about_logo"
                android:src="@drawable/binhungrig_logo"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                />

            <TextView
                android:id="@+id/textView_appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_below="@id/imageView_about_logo"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <TextView
                android:id="@+id/textView_appDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_desctiption"
                android:layout_below="@id/textView_appName"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textStyle="italic"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutText"
                android:layout_below="@id/textView_appDescription"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>